cargo-features = ["edition2024"]

[package]
name = "evolvingstring"
version = "0.1.0"
authors = ["Jesse McPherson <jesse@mcfearsome.dev>"]
edition = "2024"
repository = "https://github.com/mcfearsome/rust-evolvingstring"
readme = "readme.md"
license = "MIT"
description = "A Rust crate for creating evolving strings based on SHA256, with serialization and time-based prediction capabilities."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
chrono = "0.4.19"
serde_json = "1.0"
base64 = "0.13.0"